[gd_scene load_steps=6 format=3 uid="uid://7i081076hyvh"]

[ext_resource type="Texture2D" uid="uid://dgxlhedwmo4kn" path="res://assets/garden.png" id="1_8xl8g"]
[ext_resource type="Script" path="res://Scripts/level_select.gd" id="1_nrl1x"]
[ext_resource type="FontFile" uid="uid://gwj4uh6jh1t2" path="res://assets/Fonts/PixelOperator8-Bold.ttf" id="3_rgphx"]
[ext_resource type="AudioStream" uid="uid://br16saeieayp2" path="res://assets/Fonts/Beachvibes2 (1).mp3" id="4_a60m2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_db7t0"]
resource_local_to_scene = true
texture = ExtResource("1_8xl8g")

[node name="LevelSelect" type="Node"]
script = ExtResource("1_nrl1x")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_db7t0")

[node name="Mony" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -896.0
offset_top = 79.0
offset_right = -856.0
offset_bottom = 102.0
grow_horizontal = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rgphx")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -140.0
offset_right = 86.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rgphx")
text = "Level Select"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -42.0
offset_right = -159.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
rotation = -6.28319
scale = Vector2(6.01066, 5.33066)
localize_numeral_system = false
columns = 7

[node name="DayMinus2" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="DayMinus1" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day0" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day1" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day2" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day3" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day4" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day5" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day6" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day7" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day8" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day9" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day10" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day11" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day12" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day13" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day14" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day15" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day16" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day17" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day18" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day19" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day20" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day21" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day22" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day23" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day24" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day25" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day26" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day27" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day28" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day29" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day30" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Day31" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Dayplus1" type="Button" parent="Panel/GridContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Back" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -48.0
offset_right = -24.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
text = "Back"

[node name="Stage guid" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.0
offset_top = 136.0
offset_right = 42.0
offset_bottom = 162.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rgphx")
theme_override_font_sizes/font_size = 16
text = " "
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(534, 136)
stream = ExtResource("4_a60m2")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="Panel/GridContainer/DayMinus2" to="." method="_on_day_2_pressed"]
[connection signal="pressed" from="Panel/GridContainer/DayMinus2" to="." method="_on_day_minus_2_pressed"]
[connection signal="pressed" from="Panel/GridContainer/DayMinus1" to="." method="_on_day_1_pressed"]
[connection signal="pressed" from="Panel/GridContainer/DayMinus1" to="." method="_on_dayminus_1_pressed"]
[connection signal="pressed" from="Panel/GridContainer/DayMinus1" to="." method="_on_day_minus_1_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day0" to="." method="_on_day_0_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day1" to="." method="_on_day_1_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day2" to="." method="_on_day_2_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day3" to="." method="_on_day_3_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day4" to="." method="_on_day_4_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day5" to="." method="_on_day_5_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day6" to="." method="_on_day_6_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day7" to="." method="_on_day_7_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day8" to="." method="_on_day_8_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day9" to="." method="_on_day_9_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day10" to="." method="_on_day_10_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day11" to="." method="_on_day_11_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day12" to="." method="_on_day_12_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day13" to="." method="_on_day_13_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day14" to="." method="_on_day_14_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day15" to="." method="_on_day_15_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day16" to="." method="_on_day_16_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day17" to="." method="_on_day_17_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day18" to="." method="_on_day_18_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day19" to="." method="_on_day_19_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day20" to="." method="_on_day_20_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day21" to="." method="_on_day_21_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day22" to="." method="_on_day_22_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day23" to="." method="_on_day_23_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day24" to="." method="_on_day_24_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day25" to="." method="_on_day_25_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day26" to="." method="_on_day_26_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day27" to="." method="_on_day_27_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day28" to="." method="_on_day_28_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day29" to="." method="_on_day_29_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day30" to="." method="_on_day_30_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Day31" to="." method="_on_day_31_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Dayplus1" to="." method="_on_dayplus_1_pressed"]
[connection signal="pressed" from="Panel/Back" to="." method="_on_back_pressed"]
